[dependencies]
convert_case = "0.6.0"
proc-macro2 = "1.0.88"
quote = "1.0.37"
syn = "2.0.79"

[dev-dependencies]
trybuild = "1.0.100"
hyperion.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[package]
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
edition = "2021"
name = "hyperion-event-macros"
publish = false
readme = "README.md"
version = "0.1.0"
