cargo-features = ["edition2024"]

[dependencies]
convert_case.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[package]
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
edition = "2024"
name = "hyperion-event-macros"
publish = false
readme = "README.md"
version = "0.1.0"
