[package]
name = "hyperion-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
flecs_ecs = { workspace = true }
hyperion = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3", features = ["v4"] }
valence_protocol = { workspace = true }
tracing = { workspace = true }
rand = { version = "0.8.5", features = ["std"] }

[lints]
workspace = true
