cargo-features = ["edition2024"]

[dependencies]
hyperion-crafting = {workspace = true}
roaring = {workspace = true}
snafu = {workspace = true}
valence_protocol = {workspace = true}
flecs_ecs = {workspace = true}

[lints]
workspace = true

[package]
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
edition = "2024"
name = "hyperion-inventory"
publish = false
readme = "README.md"
version = "0.1.0"
