[dependencies]
hyperion-crafting = {workspace = true}
roaring = {workspace = true}
snafu = {workspace = true}
valence_protocol = {workspace = true}
flecs_ecs = {workspace = true}

[lints]
workspace = true

[package]
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
edition.workspace = true
name = "hyperion-inventory"
publish = false
readme = "README.md"
version.workspace = true
