cargo-features = ["edition2024"]

[dependencies]
anyhow.workspace = true
roaring.workspace = true
valence_protocol.workspace = true

[lints]
workspace = true

[package]
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
edition = "2024"
name = "hyperion-palette"
publish = false
readme = "README.md"
version = "0.1.0"
