[dependencies]
anyhow.workspace = true
roaring.workspace = true
valence_protocol.workspace = true

[lints]
workspace = true

[package]
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
edition.workspace = true
name = "hyperion-palette"
publish = false
readme = "README.md"
version.workspace = true
