cargo-features = ["edition2024"]

[dependencies]
heed = "0.20.5"
num-derive = "0.4.2"
num-traits = "0.2.19"
anyhow.workspace = true
flecs_ecs.workspace = true
hyperion.workspace = true
nom.workspace = true
tracing.workspace = true
uuid.workspace = true
valence_protocol.workspace = true

[lints]
workspace = true

[package]
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
edition = "2024"
name = "hyperion-permission"
publish = false
readme = "README.md"
version = "0.1.0"
