cargo-features = ["edition2024"]

[dependencies]
anyhow = {workspace = true}
clap = {workspace = true}
flecs_ecs = {workspace = true}
heed = {workspace = true}
hyperion = {workspace = true}
num-derive = {workspace = true}
num-traits = {workspace = true}
tracing = {workspace = true}
uuid = {workspace = true}

[lints]
workspace = true

[package]
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
edition = "2024"
name = "hyperion-permission"
publish = false
readme = "README.md"
version = "0.1.0"
