[dependencies]
anyhow = {workspace = true}
clap = {workspace = true}
flecs_ecs = {workspace = true}
heed = {workspace = true}
hyperion = {workspace = true}
num-derive = {workspace = true}
num-traits = {workspace = true}
tracing = {workspace = true}
uuid = {workspace = true}


[lints]
workspace = true

[package]
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
edition.workspace = true
name = "hyperion-permission"
publish = false
readme = "README.md"
version.workspace = true
