[build-dependencies]

[dependencies]
rkyv = {version = "0.8.8"}

[lints]
workspace = true

[package]
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
edition = "2021"
name = "hyperion-proto"
publish = false
readme = "README.md"
version = "0.1.0"

[package.metadata.cargo-machete]
ignored = ["prost"]
