cargo-features = ["edition2024"]

[build-dependencies]

[dependencies]
rkyv.workspace = true

[lints]
workspace = true

[package]
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
edition = "2024"
name = "hyperion-proto"
publish = false
readme = "README.md"
version = "0.1.0"

[package.metadata.cargo-machete]
ignored = ["prost"]
