[build-dependencies]

[dependencies]
rkyv = {workspace = true}
glam = {workspace = true}

[lints]
workspace = true

[package]
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
edition.workspace = true
name = "hyperion-proto"
publish = false
readme = "README.md"
version.workspace = true

[package.metadata.cargo-machete]
ignored = ["prost"]
