cargo-features = ["edition2024"]

[dependencies]
colored = "2.1.0"
kanal = "0.1.0-pre8"
# integer-encoding = "4.0.2"
papaya = "0.1.4"
rkyv = "0.8.8"
rustc-hash = "2.0.0"
tokio = {workspace = true, features = ["full", "tracing"]}
tokio-util = {version = "0.7.12", features = ["full"]}
anyhow.workspace = true
bvh.workspace = true
bytes.workspace = true
clap.workspace = true
glam.workspace = true
heapless.workspace = true
hyperion-proto.workspace = true
more-asserts.workspace = true
slotmap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true

[package]
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
edition = "2024"
name = "hyperion-proxy"
publish = false
readme = "README.md"
version = "0.1.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
tikv-jemallocator.workspace = true
