[package]
name = "hyperion-rank-tree"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"
publish = false

[dependencies]
hyperion-inventory = { workspace = true }
hyperion = { workspace = true }
toml = { workspace = true }
valence_protocol = { workspace = true }
clap = { workspace = true }
flecs_ecs = { workspace = true }
hyperion-item.workspace = true

[lints]
workspace = true
