[package]
name = "hyperion-rank-tree"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"
publish = false

[dependencies]
clap = { workspace = true }
flecs_ecs = { workspace = true }
hyperion = { workspace = true }
hyperion-inventory = { workspace = true }
hyperion-item.workspace = true
toml = { workspace = true }
tracing = { workspace = true }
valence_protocol = { workspace = true }

[lints]
workspace = true
