[[bench]]
harness = false
name = "parallel_stats"

[dependencies]

[dev-dependencies]
rand = "0.9.0-alpha.2"
approx.workspace = true
divan.workspace = true

[lints]
workspace = true

[package]
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
edition = "2021"
name = "hyperion-stats"
publish = false
readme = "README.md"
version = "0.1.0"
