cargo-features = ["edition2024"]

[[bench]]
harness = false
name = "parallel_stats"

[dependencies]

[dev-dependencies]
rand.workspace = true
approx.workspace = true
divan.workspace = true

[lints]
workspace = true

[package]
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
edition = "2024"
name = "hyperion-stats"
publish = false
readme = "README.md"
version = "0.1.0"
