[[bench]]
harness = false
name = "parallel_stats"

[dependencies]

[dev-dependencies]
rand.workspace = true
approx.workspace = true
divan.workspace = true

[lints]
workspace = true

[package]
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
edition.workspace = true
name = "hyperion-stats"
publish = false
readme = "README.md"
version.workspace = true
