cargo-features = ["edition2024"]

[dependencies]
serde = {version = "1.0.214", features = ["derive"]}
serde_json = "1.0.128"
thiserror = "1.0.64"
uuid = {version = "1.10.0", features = ["v4", "serde"]}
valence_protocol.workspace = true

[lints]
workspace = true

[package]
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
edition = "2024"
name = "hyperion-text"
publish = false
readme = "README.md"
version = "0.1.0"
